<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/provider_image_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding"
            android:visibility="gone"
            tools:visibility="visible"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/provider_image"
                android:layout_width="@dimen/pro_image_default_size"
                android:layout_height="@dimen/pro_image_default_size"
                app:civ_border_color="@color/border_gray"
                app:civ_border_width="1dp"
                tools:src="@drawable/img_pro_placeholder"
                />

            <TextView
                android:id="@+id/provider_image_edit_button"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/edit_photo"
                android:textColor="@color/handy_blue"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/provider_name_error_indicator"
                android:layout_width="@dimen/extra_padding"
                android:layout_height="match_parent"
                android:contentDescription="@string/error"
                android:paddingBottom="@dimen/thin_padding"
                android:src="@drawable/rectangle_red"
                android:visibility="invisible"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name"
                android:paddingBottom="@dimen/default_padding"
                android:paddingLeft="@dimen/inner_field_padding"
                android:paddingStart="@dimen/inner_field_padding"
                android:paddingTop="@dimen/default_padding"
                android:src="@drawable/ic_profile"
                />

            <EditText
                android:id="@+id/provider_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:hint="@string/name"
                android:maxLines="1"
                android:nextFocusDown="@+id/provider_email_edit_text"
                android:padding="@dimen/default_padding"
                android:textColor="@color/dark_gray"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/provider_email_error_indicator"
                android:layout_width="@dimen/extra_padding"
                android:layout_height="match_parent"
                android:contentDescription="@string/error"
                android:paddingBottom="@dimen/thin_padding"
                android:src="@drawable/rectangle_red"
                android:visibility="invisible"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email"
                android:paddingBottom="@dimen/default_padding"
                android:paddingLeft="@dimen/inner_field_padding"
                android:paddingStart="@dimen/inner_field_padding"
                android:paddingTop="@dimen/default_padding"
                android:src="@drawable/ic_email"
                />

            <EditText
                android:id="@+id/provider_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/provider_address_edit_text"
                android:padding="@dimen/default_padding"
                android:textColor="@color/dark_gray"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/provider_address_error_indicator"
                android:layout_width="@dimen/extra_padding"
                android:layout_height="match_parent"
                android:contentDescription="@string/error"
                android:paddingBottom="@dimen/thin_padding"
                android:src="@drawable/rectangle_red"
                android:visibility="invisible"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/address"
                android:paddingBottom="@dimen/default_padding"
                android:paddingLeft="@dimen/inner_field_padding"
                android:paddingStart="@dimen/inner_field_padding"
                android:paddingTop="@dimen/default_padding"
                android:src="@drawable/ic_location"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12"
                >

                <EditText
                    android:id="@+id/provider_address_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:hint="@string/address"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/provider_address2_edit_text"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/dark_gray"
                    />

                <EditText
                    android:id="@+id/provider_address2_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@null"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/provider_city_edit_text"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/dark_gray"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/provider_area_error_indicator"
                android:layout_width="@dimen/extra_padding"
                android:layout_height="match_parent"
                android:contentDescription="@string/error"
                android:paddingBottom="@dimen/thin_padding"
                android:src="@drawable/rectangle_red"
                android:visibility="invisible"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/address"
                android:paddingBottom="@dimen/default_padding"
                android:paddingLeft="@dimen/inner_field_padding"
                android:paddingStart="@dimen/inner_field_padding"
                android:paddingTop="@dimen/default_padding"
                android:src="@drawable/ic_location"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12"
                >

                <EditText
                    android:id="@+id/provider_city_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@null"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/provider_state_edit_text"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/dark_gray"
                    />

                <EditText
                    android:id="@+id/provider_state_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/provider_zip_code_edit_text"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/dark_gray"
                    />

                <EditText
                    android:id="@+id/provider_zip_code_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@null"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/provider_phone_edit_text"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/dark_gray"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/provider_phone_error_indicator"
                android:layout_width="@dimen/extra_padding"
                android:layout_height="match_parent"
                android:contentDescription="@string/error"
                android:paddingBottom="@dimen/thin_padding"
                android:src="@drawable/rectangle_red"
                android:visibility="invisible"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/phone"
                android:paddingBottom="@dimen/default_padding"
                android:paddingLeft="@dimen/inner_field_padding"
                android:paddingStart="@dimen/inner_field_padding"
                android:paddingTop="@dimen/default_padding"
                android:src="@drawable/ic_phone"
                />

            <EditText
                android:id="@+id/provider_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/default_padding"
                android:textColor="@color/dark_gray"
                />

        </LinearLayout>

        <Button
            android:id="@+id/profile_update_provider_button"
            style="@style/Button.Green.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/save"
            />
    </LinearLayout>

</ScrollView>
