<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="claim_button"
          type="id"/>
    <item name="on_my_way_button"
          type="id"/>
    <item name="check_in_button"
          type="id"/>
    <item name="check_out_button"
          type="id"/>
    <item name="contact_text_button"
          type="id"/>
    <item name="contact_call_button"
          type="id"/>
    <item name="remove_button"
          type="id"/>
    <item name="i_need_help_button"
          type="id"/>
    <item name="action_bar_title"
          type="id"/>
    <item name="tab_nav_clients"
          type="id"/>
    <item name="tab_nav_item_more"
          type="id"/>
    <item name="tab_nav_available"
          type="id"/>
    <item name="tab_nav_schedule"
          type="id"/>
    <item name="tab_nav_messages"
          type="id"/>
</resources>
