...
                    android:src="@drawable/customer_request_point"
                    />

            </LinearLayout>

            <com.handy.portal.ui.element.bookings.CustomerRequestsView
                android:id="@+id/in_progress_booking_checklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="vertical"
                />

...
    <Button
        android:id="@id/booking_action_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/complete_button_height"
        android:layout_alignParentBottom="true"
        android:background="@color/requested_green"
        android:text="@string/continue_to_check_out"
        android:textAllCaps="false"
        android:textColor="@drawable/checkout_button_selector"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"
        tools:visibility="visible"
        />
...
