...
                android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/complete_checkout_button"
        android:layout_alignParentTop="true"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                        android:textSize="@dimen/small_text_size"
                        />

                </RelativeLayout>

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signature_pad"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/signature_height"
                    android:background="@color/white"
                    app:penColor="@color/black"
                    />

...
