...
    >

    <ScrollView
        android:id="@+id/post_checkout_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_button"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:id="@+id/post_checkout_scroll_view_content"
            android:layout_width="match_parent"
...
                        android:drawableStart="@drawable/ic_checkable_x"
                        android:gravity="center"
                        android:text="@string/no_thanks"
                        />

                    <RadioButton
                        android:id="@+id/customer_preference_yes"
                        style="@style/Button.Radio.Green"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin_quarter"
                        android:layout_marginStart="@dimen/default_margin_quarter"
                        android:layout_weight="1"
...
